--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "botbuilder": "^4.4.0",
     "dotenv": "^6.1.0",
     "restify": "^7.2.3"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
@@ -27,8 +29,7 @@
     "husky": "^1.3.1",
     "nodemon": "^1.18.6",
     "prettier": "^1.16.4",
-    "pretty-quick": "^1.10.0",
-    "eslint-config-prettier": "^4.1.0"
+    "pretty-quick": "^1.10.0"
   },
   "engines": {
     "node": "10.15"
